new branch dev with experimental layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<span class="dummy">
+<!--<span class="dummy">
   <span class="wrapper">
     <span class="content left">      
       <img src="/media/photo/01.jpg" />
@@ -10,4 +10,10 @@
       <img src="/media/photo/03.jpg" />
     </span>
   </span>						
-</span>
+</span>-->
+
+<input type="checkbox" id="header_switcher" />
+<img src="/media/photo/02.jpg" />
+<label for="header_switcher">
+  <div></div>
+</label>
