--- a/css/main.css
+++ b/css/main.css
@@ -131,9 +131,6 @@ input, select {
   padding-bottom: 1.5em;
   margin-bottom: 1em; }
 
-/*
-	general styling
-*/
 * {
   -ms-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -143,368 +140,162 @@ input, select {
   font-family: Quicksand, sans-serif;
   word-wrap: break-word; }
 
-a, label, input[type="submit"] {
-  border: none;
+a {
   border-bottom: 1px dotted lightslategrey;
-  cursor: pointer;
   color: lightslategrey;
   font-weight: bold;
   text-decoration: none; }
-  a:hover, label:hover, input[type="submit"]:hover {
+  a:hover {
     border-bottom: 1px solid lightslategrey; }
-
-a.anchor {
-  color: black;
-  cursor: default;
-  border: none;
-  font-weight: normal; }
-
-code {
-  background-color: #d6dbd6;
-  border: 1px solid #3e3e3b;
-  font-family: monospace;
-  padding: 0.25em; }
-
-div.articleList {
-  margin-bottom: 1em; }
-  div.articleList .headline {
-    display: block;
-    padding-left: 7em; }
-  div.articleList:after {
-    clear: both;
-    content: "";
-    display: block; }
-  div.articleList:last-child {
-    margin-bottom: 0; }
-
-em {
-  font-style: normal;
-  font-weight: bold; }
-
-h1, h2 {
-  display: block; }
-
-h1 {
-  font-size: 2em;
-  line-height: 1.5em;
-  margin-bottom: 0.5em; }
-
-h2 {
-  margin-bottom: 1em; }
-
-img {
-  display: block;
-  border: 1px solid #3e3e3b; }
-
-img.left {
-  float: left;
-  margin-right: 1em;
-  margin-bottom: 0.5em; }
-
-input[type="radio"], input[type="checkbox"] {
-  display: none; }
-
-p {
-  margin-bottom: 1em; }
-
-p:last-child {
-  margin-bottom: 0; }
-
-span.symbolizedText {
-  display: block; }
-  span.symbolizedText:after {
-    clear: both;
-    content: "";
-    display: block; }
-  span.symbolizedText span:nth-child(2) {
-    display: block;
-    padding-left: 1.5em; }
-
-.noBullet {
-  list-style: none;
-  margin: 0; }
-
-ul {
-  margin-left: 1.5em; }
-  ul li li {
-    margin-left: 1em; }
-
-/*
-	basic layout
-*/
-aside {
-  bottom: 0;
-  display: block;
-  left: -500px;
-  overflow-y: auto;
-  padding: 1em;
-  position: fixed;
-  top: 5em;
-  width: 500px;
-  z-index: 1;
-  -ms-transition: left 1s ease-in-out;
-  -moz-transition: left 1s ease-in-out;
-  -o-transition: left 1s ease-in-out;
-  -webkit-transition: left 1s ease-in-out;
-  transition: left 1s ease-in-out; }
 
 body, html {
   height: 100%; }
 
 body {
-  background-color: black;
-  overflow-y: scroll;
-  position: relative; }
-
-#center {
-  display: block;
-  overflow: hidden;
-  position: relative; }
-
-#container {
-  display: block;
-  min-height: 100%;
-  padding-top: 3em;
-  position: relative;
-  z-index: 0; }
-
-footer {
-  margin: 0 auto;
-  max-width: 480px;
-  min-width: 200px;
-  padding-bottom: 1.5rem;
-  padding-top: 1.5rem;
-  width: 50%; }
-
-nav {
-  display: block;
-  position: fixed;
-  height: 3em;
-  width: 100%;
-  z-index: 2;
-  top: 0; }
-
-main {
-  display: block;
-  margin: 0 auto;
-  max-width: 960px;
-  padding: 2em;
-  width: 960px; }
-
-/*
-	logic
-*/
-#menuTrigger:checked ~ aside {
-  left: 0; }
-
-#menuTrigger:checked ~ #container {
-  opacity: 0.25; }
-
-#menuTrigger:checked ~ nav #menuButton {
-  background-color: #d6dbd6;
-  color: black; }
-
-nav input[name="navigation"]:checked + a .menuItem {
-  background-color: #d6dbd6;
-  color: black; }
-
-/*
-	styling
-*/
-.album {
-  border-collapse: separate;
-  display: table;
-  width: 100%; }
-  .album .row {
-    display: table-row;
-    width: 100%; }
-    .album .row .cell {
-      display: table-cell;
-      padding: 3%;
-      vertical-align: top; }
-  .album a {
-    border: none; }
-    .album a img {
-      box-shadow: 0 0 1em black;
-      border: none;
-      display: block;
-      opacity: 0.5;
-      width: 100%;
-      -ms-transition: 0.5s ease-in-out;
-      -moz-transition: 0.5s ease-in-out;
-      -o-transition: 0.5s ease-in-out;
-      -webkit-transition: 0.5s ease-in-out;
-      transition: 0.5s ease-in-out; }
-      .album a img:hover {
-        opacity: 1;
-        -ms-transform: scale(1.1, 1.1);
-        -moz-transform: scale(1.1, 1.1);
-        -o-transform: scale(1.1, 1.1);
-        -webkit-transform: scale(1.1, 1.1);
-        transform: scale(1.1, 1.1); }
-
-article {
-  margin-bottom: 2em; }
-  article:last-child {
-    margin-bottom: 0; }
-  article .meta {
-    display: block;
-    margin-bottom: 2em;
-    width: 100%; }
-    article .meta .date {
-      margin-right: 1em; }
-    article .meta li, article .meta ul {
-      display: inline; }
-    article .meta li:not(:last-child):after {
-      content: ","; }
-
-aside {
-  background-color: #d6dbd6;
-  border: 1px solid #3e3e3b;
-  border-left: none;
-  color: black;
-  line-height: 1.5em; }
-  aside img {
-    width: 75px; }
-
-#center {
-  background-color: ivory; }
-
-#container {
   background-color: ivory;
-  line-height: 1.5em;
-  -ms-transition: opacity 1s ease-in-out;
-  -moz-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out;
-  -webkit-transition: opacity 1s ease-in-out;
-  transition: opacity 1s ease-in-out; }
+  font-size: 12pt;
+  min-width: 300px;
+  overflow-y: scroll;
+  width: 100%; }
+
+.contact {
+  display: block;
+  width: 75%;
+  margin: 0 auto; }
+  .contact img, .contact object {
+    width: 100%; }
+
+#container {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 960px; }
+
+em {
+  font-style: normal;
+  font-weight: bold; }
 
 footer {
-  border-top: 1px solid black;
-  text-align: center;
-  font-size: 0.8333em; }
+  border-top: 1px solid #3e3e3b;
+  display: block;
+  font-size: 0.83em;
+  margin: 2.4em 2.4em;
+  padding-top: 1.2em;
+  text-align: center; }
+
+h1 {
+  display: block;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 0.67em;
+  margin-top: 1.33em; }
+
+h1:first-child {
+  margin-top: 0; }
+
+h2 {
+  font-size: 1em;
+  font-weight: bold;
+  margin-bottom: 1em; }
 
 header {
-  background-color: #d6dbd6;
   border-bottom: 1px solid #3e3e3b;
-  overflow: hidden;
   position: relative;
-  -ms-transition: opacity 1s ease-in-out;
-  -moz-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out;
-  -webkit-transition: opacity 1s ease-in-out;
-  transition: opacity 1s ease-in-out;
+  top: 0;
+  -ms-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   width: 100%; }
-  header .dummy {
-    display: block;
-    margin: 0 auto;
-    width: 960px; }
-    header .dummy .wrapper {
-      display: block;
-      height: 0;
-      position: relative;
-      padding-top: 25%; }
-      header .dummy .wrapper img {
-        border: none;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%; }
-      header .dummy .wrapper .content {
-        display: block;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        width: 100%; }
-      header .dummy .wrapper .left {
-        left: -100%;
-        z-index: 0; }
-      header .dummy .wrapper .middle {
-        left: 0;
-        z-index: 1; }
-      header .dummy .wrapper .right {
-        left: 100%;
-        z-index: 0; }
-
-main .contact {
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-  width: 75%; }
-  main .contact img {
-    border: none;
-    max-width: 100%; }
-main .navigation {
-  color: lightslategrey;
-  font-family: Genericons;
-  font-size: 1em;
-  margin-left: 2em;
-  position: absolute;
-  top: 0.5em; }
-  main .navigation:nth-child(1) {
-    left: 0em; }
-  main .navigation:nth-child(2) {
-    left: 2em; }
-  main .navigation:nth-child(3) {
-    left: 4em; }
-  main .navigation:nth-child(4) {
-    left: 6em; }
-
-nav {
-  background-color: lightslategrey;
-  border-bottom: 1px solid #3e3e3b;
-  border-top: 1px solid #3e3e3b;
-  color: white;
-  font-weight: bold;
-  line-height: 3em;
-  overflow: hidden; }
-  nav .menuItem {
-    color: white;
+  header div {
+    background-color: ivory;
+    border: 1px solid #3e3e3b;
+    border-radius: 3em;
+    bottom: -1.5em;
     cursor: pointer;
     display: block;
-    height: 100%;
-    margin: 0;
-    padding: 0 0.75em;
-    text-align: center; }
-    nav .menuItem:hover {
-      background-color: #d6dbd6;
-      color: black; }
-  nav .menuItem:hover + .hint {
-    display: block; }
-  nav .hint {
-    background-color: #d6dbd6;
-    border: 1px solid #3e3e3b;
-    color: black;
-    font-weight: bold;
-    display: none;
-    line-height: 1.5em;
-    padding: 0 0.5em;
+    font-family: Genericons;
+    height: 3em;
+    left: 50%;
+    line-height: 4.25em;
+    margin-left: -1.5em;
+    opacity: 0.5;
     position: absolute;
-    top: 3.2em;
-    z-index: 5; }
-  nav .big {
-    font-size: 2em;
-    padding: 0; }
+    text-align: center;
+    width: 3em; }
+    header div:after {
+      content: "\f432"; }
+    header div:hover {
+      box-shadow: 0 0 10px #3e3e3b; }
+  header img {
+    display: block;
+    height: 100%;
+    opacity: 0.75;
+    width: 100%; }
 
-/*
-	responsive design
-*/
-@media (max-width: 1024px) {
-  aside {
-    max-width: 500px;
-    width: 95%;
-    left: -500px; }
+#header_switcher:checked + header {
+  margin-top: -25%;
+  padding-top: 1.5em; }
 
-  body, #container, nav, main {
-    min-width: 320px; }
+#header_switcher:checked + header > label > div:after {
+  content: "\f431"; }
 
-  header .dummy {
-    max-width: 960px;
-    width: 100% !important; }
+img.left {
+  display: block;
+  float: left;
+  margin-right: 1em;
+  margin-bottom: 0.5em; }
 
-  main {
-    width: 100%; } }
-@media (max-width: 350px) {
-  aside, nav {
-    position: absolute; } }
+input[type="radio"],
+input[type="checkbox"] {
+  display: none; }
+
+main {
+  padding: 0 2em; }
+
+nav {
+  margin-top: 2em;
+  margin-bottom: 1em;
+  padding: 0 2em; }
+  nav a {
+    border: none;
+    color: lightslategrey;
+    display: block;
+    float: left;
+    font-size: 1.5em;
+    font-weight: normal;
+    margin-right: 0.67em;
+    margin-bottom: 0.67em; }
+    nav a:after {
+      content: ">";
+      opacity: 0.25; }
+    nav a:before {
+      content: "<";
+      opacity: 0.25; }
+    nav a:hover {
+      border: none; }
+  nav a:hover:after,
+  nav input[id^="entry"]:checked + a:after {
+    opacity: 1; }
+  nav a:hover:before,
+  nav input[id^="entry"]:checked + a:before {
+    opacity: 1; }
+  nav input[id^="entry"]:checked + a {
+    color: #3e3e3b; }
+  nav:after {
+    clear: both;
+    content: "";
+    display: block; }
+
+p {
+  line-height: 1.5em;
+  margin-bottom: 0.67em; }
+
+ul {
+  margin-left: 1.5em;
+  margin-bottom: 1em; }
+  ul li {
+    line-height: 1.5em;
+    margin-bottom: 0.5em; }
+    ul li:last-child {
+      margin-bottom: 0; }
