--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,25 @@
-<!--<span class="dummy">
-  <span class="wrapper">
-    <span class="content left">      
-      <img src="/media/photo/01.jpg" />
-    </span>
-    <span class="content middle">      
-      <img src="/media/photo/02.jpg" />
-    </span>
-    <span class="content right">      
-      <img src="/media/photo/03.jpg" />
-    </span>
-  </span>						
-</span>-->
+{% assign de_url = "/" %}
+{% for item in site.data.i18n["de"].navigation %}
+  {% if item.type == page.type %}
+  {% assign de_url = item.url %}
+  {% endif %}
+{% endfor %}
 
-<input type="checkbox" id="header_switcher" />
-<img src="/media/photo/02.jpg" />
+{% assign en_url = "/en/" %}
+{% for item in site.data.i18n["en"].navigation %}
+  {% if item.type == page.type %}
+  {% assign en_url = item.url %}
+  {% endif %}
+{% endfor %}
+
+{% capture locale %}{{ page.url | truncate: 3, "" | remove: "/" }}{% endcapture %}
+{% unless site.authorized_locales contains locale %}
+{% assign locale = site.default_locale %}
+{% endunless %}
+
+<img src="/media/photo/03.jpg" /> 
 <label for="header_switcher">
-  <div></div>
+  <div class="circle" id="hide_show"></div>
 </label>
+<a href="{{ de_url }}"><div class="circle link{% if locale == "de" %} selected{% endif %}" id="de">de</div></a>
+<a href="{{ en_url }}"><div class="circle link{% if locale == "en" %} selected{% endif %}" id="en">en</div></a>
