experimental layout ready for deployment

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 {% assign locale = site.default_locale %}
 {% endunless %}
 
-<img src="/media/photo/03.jpg" /> 
+<span></span>
 <label for="header_switcher">
   <div class="circle" id="hide_show"></div>
 </label>
