--- a/_includes/tagCloud.html
+++ b/_includes/tagCloud.html
@@ -31,24 +31,24 @@
 
 
 {% if tagWords.size == 0 %}
-	<p><em>{{ site.data.i18n[locale].noTags }}</em></p>
+	<p><em>{{ site.data.i18n[locale].no_tags_at_all }}</em></p>
 {% else %}
 
 <p>	
 	{% capture tagString %}
 	{% for tag in tagWords %}
 	{% assign count = tagCounts[forloop.index] %}
-	{% if count != "0" %}<a href="#{{ tag | cgi_escape }}">{{ tag }}</a>&nbsp;<span class="super">({{ count }})</span>&nbsp;{% endif %}
+	{% if count != "0" %}<a href="#{{ tag | cgi_escape }}">{{ tag }}</a><span class="super">({{ count }})</span>&nbsp;{% endif %}
 	{% endfor %}	
 	{% endcapture %}
 	{{ tagString }}
 </p>
 
-<ul class="noBullet">
+<ul class="no_bullet">
 {% for tag in tagWords %}	
 	{% if tagCounts[forloop.index] != "0" %}
 	<li><a class="anchor" name="{{ tag | cgi_escape }}"><em>{{ tag }}:</em></a>
-		<ul class="noBullet">
+		<ul class="no_bullet">
 			{% assign tagStruct = tagList[tag] %}
 			{% for post in tagStruct %}
 
@@ -60,11 +60,9 @@
 			{% else %}
 			{% assign date = post.date | date: '%d/%m/%Y' %}
 			{% endif %}				
-			<li>
-				<div class="articleList">
-					<span class="left">{{ date }}:</span>
-					<span class="headline"><a href="{{ post.url }}">{{ post.title }}</a></span>
-				</div>
+			<li>				
+				<span class="left">{{ date }}:</span>
+				<span class="headline"><a href="{{ post.url }}">{{ post.title }}</a></span>
 			</li>
 			{% endif %}
 			{% endfor %}
