--- a/_includes/articleList.html
+++ b/_includes/articleList.html
@@ -6,10 +6,10 @@
 {% if include.type == "archive" %}
 
 {% if site.categories[locale] == nil %}
-	<p><em>{{ site.data.i18n[locale].noArticles }}</em></p>
+	<p><em>{{ site.data.i18n[locale].no_articles }}</em></p>
 {% else %}
 
-<ul class="noBullet">
+<ul class="no_bullet">
 {% assign oldYear = "" %}
 {% for post in site.categories[locale] %}
 
@@ -21,15 +21,13 @@
 
 {% assign year = post.date | date: '%Y' %}
 {% if year != oldYear %}
-{% unless forloop.first %}</ul>{% endunless %}<li><em>{{ year }}</em><ul class="noBullet">
+{% unless forloop.first %}</ul>{% endunless %}<li><em>{{ year }}</em><ul class="no_bullet">
 {% endif %}
 <li>
-	<div class="articleList">	
-		<span class="left">{{ date }}:</span>
-		<span class="headline narrow">
-			<a href="{{ post.url }}">{{ post.title }}</a>    
-		</span> 
-	</div>
+	<span class="left">{{ date }}:</span>
+	<span class="headline narrow">
+		<a href="{{ post.url }}">{{ post.title }}</a>    
+	</span>
 </li>
 {% assign oldYear = year %}
 
@@ -40,7 +38,7 @@
 {% elsif include.type == "recent" %}
 
 {% if site.categories[locale] == nil %}
-	<em>{{ site.data.i18n[locale].noArticles }}</em>
+	<em>{{ site.data.i18n[locale].no_articles }}</em>
 {% else %}
 	{% for post in site.categories[locale] limit: 3 %}
 
@@ -50,21 +48,21 @@
 	{% assign date = post.date | date: '%d/%m/%Y' %}
 	{% endif %}
 
-<div class="articleList">
-	<span class="left">{{ date }}:</span>
-	<span class="headline">
-		<a href="{{ post.url }}">{{ post.title }}</a>
-		{% if post.description %}
-		<p>
-			{{ post.description }}
-		</p>
-		{% else %}
-		<p>
-			{{ site.data.i18n[locale].noDescription }}
-		</p>
-		{% endif %}
-	</span>	
-</div>
+<ul class="no_bullet">
+	<li>
+		<span class="left">{{ date }}:</span>
+		<span class="headline">
+			<a href="{{ post.url }}">{{ post.title }}</a>			
+			<p>
+				{% if post.description %}
+				{{ post.description }}
+				{% else %}
+				{{ site.data.i18n[locale].no_description }}
+				{% endif %}
+			</p>			
+		</span>	
+	</li>
+</ul>
 
 	{% endfor %}
 	{% endif %}
