--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,17 +15,20 @@ layout: default
 {% capture subdir %}/{{ locale }}{% endcapture %}
 {% endif %}
 
+{% if page.tags.size == 0 %}
+{% assign tagList = site.data.i18n[locale].no_tags_for_article %}
+{% else %}
+{% capture tagList %}{% for tag in page.tags %}, <a href="{{ subdir }}/tags/#{{ tag | cgi_escape }}">{{ tag }}</a>{% endfor %}{% endcapture %}
+{% endif %}
+
 <article>
 	<h1>{{ page.title }}</h1>
-	<span class="meta">
-		<div>
-			<span class="symbol">&#xf307;</span><span class="date">{{ date }}</span>
-		</div>		
-		<span class="symbol">&#xf302;</span>{% capture tagList %}{% for tag in page.tags %}, <a href="{{ subdir }}/tags/#{{ tag | cgi_escape }}">{{ tag }}</a>{% endfor %}{% endcapture %}{{ tagList | remove_first: ', ' }}</span>
-
-	<span class="content">
-		{{ content }}		
-	</span>
+	<p>		
+		<span class="symbol">&#xf307;</span><span class="date">{{ date }}</span><br/>
+		<span class="symbol">&#xf302;</span>{{ tagList | remove_first: ', ' }}
+	</p>
+	
+	{{ content }}		
 </article>
 
 <div id="disqus_thread"></div>
